<resources>
    <string name="app_name">Optik Joyo Abadi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="masuk_ke_akun_anda">Masuk ke akun anda</string>
    <string name="belum_memiliki_akun_daftar_sekarang">Belum memiliki akun? Daftar sekarang!</string>
    <string name="lupa_password_klik_disini">Lupa password? Klik disini</string>
    <string name="sudah_memiliki_akun_masuk_disini">Sudah memiliki akun? Masuk disini</string>
    <string name="daftar_akun">Daftar akun</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="token_fmt">%s</string>
    <string name="welcome_text">Selamat datang, %s</string>
    <string name="image_desc_thumbnail">Gambar Produk</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="belum_ada_transaksi">Belum ada transaksi</string>
    <string name="subtotal">SUBTOTAL</string>
    <string name="checkout">CHECKOUT</string>
    <string name="tambah_ke_keranjang">tambah ke keranjang</string>
    <string name="kacamata">Kacamata</string>
    <string name="sunglasses">Sunglasses</string>
    <string name="softlens_dan_aksesoris">Softlens dan Aksesoris</string>
    <string name="buat_akun_baru">Buat akun baru</string>
    <string name="nama">Nama</string>
    <string name="stok_tersedia">Stok tersedia</string>
    <string name="stok_habis">Stok habis</string>
    <string name="invoice">INVOICE</string>
    <string name="tanggal_pembelian">Tanggal Pembelian</string>
    <string name="bukti_transfer">Bukti Transfer</string>
    <string name="total">total</string>
    <string name="shipping">Pengiriman</string>
    <string name="tolak_pesanan">batalkan pesanan</string>
    <string name="bukti_pembayaran">Bukti Pembayaran</string>
    <string name="jumlah_bayar">Jumlah Bayar</string>
    <string name="tanggal_pembayaran">Tanggal Pembayaran</string>
    <string name="belum_bayar">Belum bayar</string>
    <string name="beranda">Beranda</string>
    <string name="keranjang">Keranjang</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="daftar_alamat">Daftar Alamat</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="profil_dan_akun">Profil dan Akun</string>
    <string name="pengaturan_aplikasi">Pengaturan Aplikasi</string>
    <string name="ubah_alamat">Ubah Alamat</string>
    <string name="jadikan_alamat_utama">Jadikan Utama</string>
    <string name="informasi_akun">Informasi Akun</string>
    <string name="belum_ada_item_di_keranjang">Belum ada item di keranjang</string>
    <string name="empty_cart_image">Empty Cart Image</string>
    <string name="ubah">Ubah</string>
    <string name="nomor_telephone">Nomor Telephone</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="keamanan_akun">Keamanan Akun</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="nama_penerima">Nama Penerima</string>
    <string name="alamat">Alamat</string>
    <string name="kota">Kota</string>
    <string name="provinsi">Provinsi</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="nomor_telpon_penerima">Nomor Telpon Penerima</string>
    <string name="upload_bukti_pembayaran">Upload bukti pembayaran</string>
    <string name="pilih_bukti_pembayaran">Pilih bukti pembayaran</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="bayar">bayar</string>
    <string name="nanti_saja">Nanti saja</string>
    <string name="tambah_alamat_sekarang">Tambah Alamat Sekarang</string>
    <string name="kamu_belum_memiliki_alamat_pengiriman_nih_mari_tambahkan_satu_terlebih_dahulu_sebelum_melanjutkan">Kamu belum memiliki alamat pengiriman nih. Mari tambahkan satu terlebih dahulu sebelum melanjutkan.</string>
    <string name="tambah_alamat">Tambah Alamat</string>
    <string name="tampilkan_semua">Tampilkan semua</string>
    <string name="pilih_alamat">Pilih Alamat</string>
    <string name="jumlah">Jumlah</string>
    <string name="catatan">Catatan</string>
    <string name="not_yet_verified">Anda Belum Terverifikasi</string>
    <string name="not_yet_verified_message">Mohon cek email anda untuk link verifikasi. Klik tombol verifikasi di bawah untuk mengirimkan email verifikasi ulang.</string>
    <string name="kirim_ulang">Kirim Ulang</string>
    <string name="tutup">Tutup</string>
    <string name="belum_ada_alamat">Belum ada Alamat</string>
    <string name="reset_pwd_msg">Silahkan check email anda untuk reset password</string>
    <string name="empty_email_msg">Email tidak boleh kosong</string>
    <string name="invalid_input_msg">Harap periksa email atau password anda</string>
    <string name="please_reset_pwd_msg">Mohon reset password anda dengan fitur lupa password</string>
    <string name="update_address_success">Sukses mengubah alamat</string>
    <string name="add_address_success">Sukses menambahkan alamat</string>
    <string name="keluar">Keluar</string>
    <string name="pesanan_selesai">Pesanan Selesai</string>
    <string name="tentang_kami">Tentang kami</string>
    <string name="belisekarang">Beli Sekarang</string>
</resources>